--- a/LeetCode-easy-other/LeetCode-easy-other.vcxproj
+++ b/LeetCode-easy-other/LeetCode-easy-other.vcxproj
@@ -11,8 +11,8 @@
     </ProjectConfiguration>
   </ItemGroup>
   <PropertyGroup Label="Globals">
-    <ProjectGuid>{C07D7143-A856-41C1-839C-6943CDFBA0DC}</ProjectGuid>
-    <RootNamespace>LeetCodeeasylist</RootNamespace>
+    <ProjectGuid>{7DE54128-56E9-4589-B747-7EB1B4A6DA21}</ProjectGuid>
+    <RootNamespace>LeetCodeeasyother</RootNamespace>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -67,13 +67,11 @@
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="CommonType.h" />
-    <ClInclude Include="DeleteNode.h" />
-    <ClInclude Include="HasCycle.h" />
-    <ClInclude Include="IsPalindrome.h" />
-    <ClInclude Include="MergeList.h" />
-    <ClInclude Include="RemoveFromEnd.h" />
-    <ClInclude Include="ReverseList.h" />
+    <ClInclude Include="ClimbStairs.h" />
+    <ClInclude Include="FirstBadVersion.h" />
+    <ClInclude Include="MaxProfit.h" />
+    <ClInclude Include="MaxSubArray.h" />
+    <ClInclude Include="MergeSortedArray.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
