--- a/LeetCode-easy-other/LeetCode-easy-other.vcxproj.filters
+++ b/LeetCode-easy-other/LeetCode-easy-other.vcxproj.filters
@@ -53,5 +53,26 @@
     <ClInclude Include="PowerOfThree.h">
       <Filter>源文件</Filter>
     </ClInclude>
+    <ClInclude Include="RomanToInt.h">
+      <Filter>源文件</Filter>
+    </ClInclude>
+    <ClInclude Include="HammingWeight.h">
+      <Filter>源文件</Filter>
+    </ClInclude>
+    <ClInclude Include="HammingDistance.h">
+      <Filter>源文件</Filter>
+    </ClInclude>
+    <ClInclude Include="ReverseBits.h">
+      <Filter>源文件</Filter>
+    </ClInclude>
+    <ClInclude Include="YanghuiTriangle.h">
+      <Filter>源文件</Filter>
+    </ClInclude>
+    <ClInclude Include="MissingNumber.h">
+      <Filter>源文件</Filter>
+    </ClInclude>
+    <ClInclude Include="ValidBracket.h">
+      <Filter>源文件</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
